Fix 'invisible wall' on description box

--- a/assets/css/dashboard/eventsarea.css
+++ b/assets/css/dashboard/eventsarea.css
@@ -39,6 +39,7 @@
 .InfoBox {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .EventPresenters {
